[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/nine-patch-with-header.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/planet_list_screen/planet_list_screen.gd" type="Script" id=4]

[node name="PlanetListScree" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -208, 441 )
mouse_filter = 1
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 360.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
region_rect = Rect2( 0.187962, 97.5782, 320.191, 139.108 )
patch_margin_left = 40
patch_margin_top = 92
patch_margin_right = 43
patch_margin_bottom = 114

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 33.0
margin_right = -32.0
margin_bottom = -32.0
mouse_filter = 2

[node name="MainVBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_right = 296.0
margin_bottom = 655.0
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_right = 296.0
margin_bottom = 587.0
mouse_filter = 1
size_flags_vertical = 3

[node name="PlanetsVBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer/ScrollContainer"]
margin_right = 296.0
margin_bottom = 587.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" parent="NinePatchRect/MarginContainer/MainVBoxContainer" instance=ExtResource( 3 )]
margin_top = 591.0
margin_bottom = 655.0
title = "Back"

[connection signal="pressed" from="NinePatchRect/MarginContainer/MainVBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
